made main container overflow and fixed height to 300px

--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ h1 {
   background-color: #fdcb6e;
 }
 
+main {
+  height: 300px;
+  overflow-y: scroll;
+}
+
 #container {
   display: flex;
   flex-wrap: wrap;
@@ -28,7 +33,6 @@ h1 {
 
   gap: 10px;
 
-  height: 600px;
   margin: 15px;
 }
 
@@ -45,8 +49,44 @@ blockquote {
   margin-bottom: 10px;
 }
 
+#quote-submission-box {
+  margin: 0 10px;
+}
+
+form {
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+}
+
+textarea,
+input {
+  display: block;
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 20px;
+}
+
+input {
+  width: 100px;
+  font-weight: bold;
+}
+
 @media (min-width: 859px) {
+  main {
+    height: 250px;
+  }
   figure {
     flex-basis: 400px;
+  }
+}
+
+@media (max-width: 858px) {
+  main {
+    height: 200px;
   }
 }
